<resources>
    <string name="app_name">Wisata</string>

    <string name="desc_kuta">Pantai Kuta adalah sebuah tempat pariwisata yang terletak di kecamatan Kuta, sebelah selatan Kota Denpasar, Bali, Indonesia. Daerah ini merupakan sebuah tujuan wisata turis mancanegara dan telah menjadi objek wisata andalan Pulau Bali sejak awal tahun 1970-an.</string>

    <string name="desc_sanur">
Bagi para wisatawan nama Pantai Sanur pasti sudah tidak asing lagi. Dimana, kawasan ini merupakan pantai klasik yang tidak akan pernah bisa terlupakan. Walau, saat ini Bali mulai bermunculan pantai-pantai menawan hati.
    </string>

    <string name="text3">
Danau Buatan Lembah Sari terletak di Desa Limbungan. Desa ini berjarak sekitar 10 km dari pusat kota. Danau buatan ini menawarkan pemandangan alam yang asri dan sejuk sehingga kamu akan merasa tenang dan puas jika berkunjung ke sana.

Awalnya, danau ini digunakan sebagai bendungan irigasi. Namun, lama kelamaan berubah menjadi destinasi wisata yang bagus dan menarik untuk dikunjungi. Disini, kamu dapat melakukan kegiatan seperti piknik dengan keluarga, menaiki perahu dayung, naik sepeda air, dan masih banyak lagi.
    </string>

    <string name="text4">
Destinasi wisata yang ada di Pekanbaru berikutnya adalah Hutan Raya Sultan Syarif Hasyim. Hutan raya ini sering dikunjungi wisatawan sehingga selalu ramai setiap harinya. Hutan raya yang cantik ini menawarkan pemandangan alam yang asri, hijau, dan sejuk disertai dengan pepohonan yang menjulang tinggi ke atas.

Banyak wisatawan yang pergi ke Hutan Raya Sultan Syarif Hasyim bersama keluarga untuk menikmati pemandangan, melepas penat, jalan-jalan, dan menenangkan pikiran. Disini juga terdapat beberapa wahana permainan sehingga kamu tidak akan merasa bosan ketika berada di sana. Hutan raya berlokasi sekitar 23 km dari pusat kota.
    </string>

    <string name="text5">
Di Pekanbaru, terdapat desa wisata yang cukup terkenal bernama Desa Wisata Okura. Pada awalnya, desa ini merupakan sebuah kelurahan, namun pemerintah setempat mengembangkan kelurahan ini menjadi desa wisata yang menarik banyak pengunjung.

Disini, kamu dapat melihat pemandangan asri yang ada di desa wisata tersebut. Hawa yang sejuk dan menyegarkan siap menyambutmu ketika menginjakkan kaki di Desa Wisata Okura. Destinasi wisata ini cocok dijadikan sebagai wisata keluarga.
    </string>

    <string name="text6">
Terdapat destinasi wisata air yang cukup populer di Kota Pekanbaru yang bernama Riau Fantasi. Tempat wisata ini menjadi pilihan favorit banyak keluarga untuk menghabiskan waktu liburan bersama anak. Disini, terdapat banyak wahana permainan yang bisa di coba seperti wave blaster, kora-kora, komedi putar, sky tower, kereta mini, dan masih banyak lagi.

Ada juga fasilitas yang disediakan di Riau Fantasi seperti mushola, wifii, gazebo, tempat makan, dan toilet. Untuk kamu yang ingin ke Riau Fantasi, hanya perlu waktu selama 45 menit dari pusat kota untuk bisa ke sana. Biaya masuknya sekitar Rp 60.000 pada hari Senin-Jumat dan Rp 70.000 untuk hari Sabtu dan Minggu.
    </string>

    <string name="desc_bajra">
Objek wisata Monumen Bajra Sandhi, adalah sebuah monumen yang berada di jantung kota Denpasar, tempatnya berada di daerah Renon. Monumen ini dibangun dan didedikasikan untuk perjuangan rakyat pulau Bali. Banyak wisatawan domestik yang tidak tahu akan kawasan Renon Denpasar. Malahan yang banyak tahu tentang monumen Bajra Sandhi Renon adalah wisatawan asing. Seperti wisatawan Korea dan China.
    </string>

    <string name="desc_art">
Bali Art Centre Denpasar adalah komplek bangunan yang memiliki luas kurang lebih 5 hektar. Dengan gaya arsitektur tradisional Bali, bangunan-bangunan yang ada disini begitu kokoh dan indah. Dilengkapi juga dengan taman-taman yang tertata rapi dan juga terdapat sebuah anak sungai yang berada di area taman.
    </string>

    <string name="desc_besakih">
Pura besakih merupakan salah satu tempat sembahyang umat hindu terbesar di Indonesia.Lokasi dari Pura ini terletak di pulau bali
    </string>


    <string name="desc_batur">
        Pura Ulun Danu Batur jadi destinasi wisata yang menarik saat berkunjung ke Kintamani, Pulau Bali. Pura yang satu ini dikenal sebagai pura paling penting kedua di Pulau Bali. Tentunya setelah Pura Besakih. Jadi tidak heran kalau upacara keagamaan Hindu pun kerap dilakukan di tempat ini.
    </string>

    <string name="text11">
        Menjadi vihara terbesar di Kota Pekanbaru, Riau, Vihara Kwan Tee Kong Bio (Satya Dharma) banyak dikunjungi oleh sejumlah wisatawan, baik dari dalam negeri hingga mancanegara.Salah satunya adalah rombongan dari perwakilan pemerintah Taiwan yang kuat menyempatkan diri berkunjung dan melihat kemegahan vihara yang berada di Jalan Tanjung Katung, Kelurahan Umban Sari, Kecamatan Rumbai, Kota Pekanbaru itu, Jumat (9/3/2018). Setelah berkeliling dan melihat kemegahan vihara yang baru diresmikan pada pertengahan tahun 2016 silam ini, Jhon C Chen selaku Taipei Economic and Trade Office (TETO) tampak kagum dengan salah satu vihara yang dibanggakan masyarakat suku tionghoa Riau.
    </string>

    <string name="desc_babi">
Warung Babi Guling Pande Egi menyajikan kuliner babi guling dengan cita rasa yang khas Gianyar. Bagi para pencinta nasi babi guling, Anda akan bisa menemukan perbedaan antara olahan babi guling dari berbagai daerah di Bali. Kalau babi guling dari Gianyar, terkenal dengan rasa yang tajam dengan sambal pedas.
    </string>

    <string name="desc_lawar">
Lawar Bu Edi merupakan salah satu lawar yang terkenal di daerah peguyangan denpasar.Saya sendiri sering mengunjungi warung makan tersebut sejak zaman smp.Untuk kalian yang suka lawar wajib mampir disini
    </string>
    <string name="alamat_kuta">Jl. Pantai Kuta, Kuta, Kabupaten Badung, Bali, Indonesia 80361</string>
    <string name="alamat_sanur">Jalan Kusuma Sari No. 1, Sanur, Denpasar Selatan, Kota Denpasar Bali.</string>
    <string name="alamat_bajra">Jl. Puputan Renon, Denpasar, Bali</string>
    <string name="alamat_art">Jalan Nusa Indah Denpasar Bali</string>
    <string name="alamat_besakih">Jl. Gunung Mas No.Ds, Besakih, Rendang, Kabupaten Karangasem, Bali 80863</string>
    <string name="alamat_batur">Jl. Raya Kintamani, Batur Sel., Kec. Kintamani, Kabupaten Bangli, Bali 80652</string>
    <string name="alamat_babi">Banjar Pande, Beng, Kec. Gianyar, Kabupaten Gianyar, Bali 80513, Indonesia</string>
    <string name="alamat_lawar">Jalan Antasura no 115.A</string>
    <string name="title_share">Share</string>

    <string name="name_aan">Nama: Adrian Arta Chandra</string>
    <string name="nim_aan">NIM: 1905551068</string>
    <string name="ttl_aan">Tgl Lahir: 08 Maret 2001</string>

    <string name="name_oki">Nama: Oki Chandra Oktavian</string>
    <string name="nim_oki">NIM: 1905551071</string>
    <string name="ttl_oki">Tgl Lahir: 18 Oktober 2000</string>

    <string name="name_nata">Nama: Putu Gede Pranata Mahardika</string>
    <string name="nim_nata">NIM: 1905551060</string>
    <string name="ttl_nata">Tgl Lahir: 8 Mei 2001</string>

    <string name="name_aryasa">Nama: I Komang Dana Aryasa</string>
    <string name="nim_aryasa">NIM: 1905551074</string>
    <string name="ttl_aryasa">Tgl Lahir: 19 April 2001</string>

</resources>