<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BFDAEF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_share_batur"
        android:text="@string/title_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="256dp"
       android:layout_gravity="center"
        android:src="@drawable/batur" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#093B51"
        android:padding="20dp"
        android:textAlignment="center"
        android:text="PURA BATUR"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/tv_alamat_batur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:text="@string/alamat_batur"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16dp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="338dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/desc_batur"
            android:justificationMode="inter_word"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20dp" />

    </ScrollView>

</LinearLayout>